tests/facebookisms/facebookisms.exp
Error: copyProperties.js:6
  6:     (copyProperties()); // error, unknown global
          ^^^^^^^^^^^^^^ copyProperties. Could not resolve name

Error: copyProperties.js:31
 31:     (copyProperties({ foo: 'a' }): { foo: number }); // err, num !~> string
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
 31:     (copyProperties({ foo: 'a' }): { foo: number }); // err, num !~> string
                                        ^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
     31:     (copyProperties({ foo: 'a' }): { foo: number }); // err, num !~> string
                                    ^^^ string. This type is incompatible with
     31:     (copyProperties({ foo: 'a' }): { foo: number }); // err, num !~> string
                                                   ^^^^^^ number

Error: invariant.js:6
  6:     invariant(x, 'truthy only'); // error, forgot to require invariant
         ^^^^^^^^^ invariant. Could not resolve name

Error: mergeInto.js:6
  6:     (mergeInto()); // error, unknown global
          ^^^^^^^^^ mergeInto. Could not resolve name

Error: test.js:6
  6:     var x: string = this.x;
                         ^^^^^^ number. This type is incompatible with
  6:     var x: string = this.x;
                ^^^^^^ string

Error: test.js:7
  7:     this.y = "";
              ^ property `y`. Property not found in
  7:     this.y = "";
         ^^^^ Foo


Found 6 errors
